--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
+<!--Name - Nityanand Pandey | Student id - 8911829-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+    <title>Midterm</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+
+    <body>
+        <header class="stuctural">
+            <h1>Dog</h1>
+        </header>
+
+        <main class="structural">
+            <figure id="Dog1">
+                <img src="dog-group.webp" alt="A group of dogs" width="300" height="200">
+                <figcaption>Different types of dogs in group</figcaption>
+            </figure>
+            <figure id="Dog2">
+                <img src="dog1.jpg" alt="Dog wearing sunglasses" width="300" height="200">
+                <figcaption>Cool dog wearing sunglasses</figcaption>
+            </figure>
+
+            <section>
+                <h2>More Information</h2>
+                <ul>
+                    <li><a href="https://en.wikipedia.org/wiki/Dog" target="_blank">Wikipedia</a></li>
+                    <li><a href="https://www.britannica.com/animal/dog">Britannica</a></li>
+                </ul>
+            </section>
+        </main>
+        <footer class="structural">
+            &copy; Nityanand Pandey 2023
+        </footer>
+    </body>
+    </html>
